# pondus

./: .gitignore  .hgignore  AUTHORS  AUTHORS.md  CONTRIBUTING  CONTRIBUTING.md  COPYING  INSTALL  INSTALL.md  LICENSE  MANIFEST.in  NEWS  NEWS.md  README  README.md  TODO  TODO.md  check_and_format.sh  pondus.py  pyproject.toml  run-pondus.py  run_pondus.py  setup.cfg  setup.py
.github/workflows/: test-and-lint.yml
.tx/: config
data/: pondus.1.md  pondus.1.txt  pondus.desktop
data/icons/: pondus.xpm
debian/: changelog  control  copyright  menu  rules  watch
po/: README  README.md  bg.po  ca.po  de.po  eo.po  es.po  es_CO.po  fi.po  fr.po  he.po  it.po  pl.po  pondus.pot  ru.po  sv.po  tr.po  update_po.py
pondus/: __init__.py  parameters.py
pondus/backends/: __init__.py  csv_backend.py  sportstracker_backend.py  util.py  xml_backend.py  xml_backend_old.py
pondus/core/: __init__.py  all_datasets.py  config_parser.py  csv_parser.py  dataset.py  filelock.py  initialize.py  logger.py  option_parser.py  parameters.py  person.py  plot.py  util.py  xml_parser.py
pondus/gui/: __init__.py  dialog_add.py  dialog_csv.py  dialog_csv_export.py  dialog_csv_import.py  dialog_imexport.py  dialog_message.py  dialog_plot.py  dialog_preferences.py  dialog_save_file.py  dialog_select_file.py  guiutil.py  window_main.py
src/: pondus.py
src/pondus/: __init__.py  datasets.py  parameters.py  user_data.py
src/pondus/core/: __init__.py  all_datasets.py  config_parser.py  csv_parser.py  dataset.py  filelock.py  initialize.py  option_parser.py  person.py  plot.py  util.py  xml_parser.py
src/pondus/gui/: __init__.py  dialog_add.py  dialog_csv_export.py  dialog_csv_import.py  dialog_message.py  dialog_plot.py  dialog_preferences.py  dialog_remove.py  dialog_save_file.py  dialog_save_plot.py  dialog_select_file.py  dialog_wrong_format.py  guiutil.py  window_main.py
tests/fixtures/: datasets.py
tests/pondus/core/: test_all_datasets.py  test_dataset.py  test_util.py
